@@ -4,3 +4,5 @@ README
 Makefile.PL
 lib/Algorithm/Numerical/Shuffle.pm
 t/000_tests.t
+t/950_pod.t
+t/960_pod_coverage.t
