@@ -1,3 +1,7 @@
+Version 2009110301
+- Modernized Makefile.PL.
+- Added POD tests.
+----
 Version 2009040301
 - Moved to git and github.
 - Update License.
